1. Minor bug fixes 2. Name changed to title (Database) 3. Moved style to css/backlogStyle.css 4. Optimised module script for faster web loading time (Backend) 5. Reformatted code for readability

--- a/public/css/backlogStyle.css
+++ b/public/css/backlogStyle.css
@@ -183,7 +183,7 @@
         background-color: #6E6AF0;
         border-radius: 20px;
         font-family: 'Poppins', sans-serif;
-        font-weight: 500;
+        font-weight: 400;
         padding: 5px 10px;
         border: none;
     }
